<resources>
    <string name="app_name">ZWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_reset_password">Reset Password</string>

    <string name="hint_email">Enter your email address</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_password_register">Create your password</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="slogans">Make easy your payment</string>


    //longest desc
    <string name="text_login_desc">Login to your existing account to access all the features in Zwallet.</string>
    <string name="text_register_desc">Create your account to access Zwallet.</string>
    <string name="text_reset_password_desc">Enter your Zwallet e-mail so we can send you a password reset link.</string>
    <string name="personal_info_desc">We got your personal information from the sign up proccess. If you want to make changes on your information, contact our support.</string>
    <string name="arrow_back_icon_description">arrow back icon</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password_desc">You must enter your current password and then type your new password twice.</string>
    <string name="back_button">Back Button</string>
    <string name="create_security_pin">Create Security PIN</string>
    <string name="create_security_pin_desc">Create a PIN that’s contain 6 digits number for security purpose in Zwallet.</string>
    <string name="confirm">Confirm</string>
    <string name="pin_successfully_created">PIN Successfully Created</string>
    <string name="pin_success_desc">Your PIN was successfully created and you can now access all the features in Zwallet. Login to your new account and start exploring!</string>
    <string name="login_now">Login Now</string>
    <string name="find_receiver">Find Receiver</string>
    <string name="confirmation">Confirmation</string>
    <string name="details">Details</string>
    <string name="success_check_icon">success check icon</string>
    <string name="transfer_to">Transfer to</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="transfer_failed_desc">We can’t transfer your money at the moment, we recommend you to check your internet connection and try again.</string>
    <string name="success_icon">Success Icon</string>
    <string name="transfer_success">Transfer Success</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="balance">Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="see_all">See all</string>
    <string name="login">Login</string>
    <string name="_0_00">0.00</string>
    <string name="add_phone_desc">Add at least one phone number for the transfer ID so you can start transfering your money to another user.</string>
    <string name="submit">Submit</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
</resources>