<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="parent"
    android:background="#FAFCFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/navigation_back"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_font_medium"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/input_pin_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigation_back"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/change_password_desc"
            android:fontFamily="@font/nunito"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/input_pin_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_pin_description"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/inputCurrentPassword"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="password"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:hint="@string/current_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/inputNewPassword"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="password"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="password"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@drawable/background_primary"
        android:textAllCaps="false"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>