<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="parent"
    android:background="@color/zBackgroundLightGrey">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@drawable/header_primary"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/navigation_back"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_phone_number"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_font_medium"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/input_pin_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigation_back"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:text="@string/add_phone_desc"
            android:fontFamily="@font/nunito"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/input_pin_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_pin_description"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/inputNewPhoneNum"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:hint="Input Phone Number"
                android:text="+62"
                android:textSize="18sp"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@drawable/background_primary"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>